Updated chum enhancement and bib file for case study paper

--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -185,7 +185,7 @@ We evaluated whether the proportion of CUs above their lower benchmark could be 
 Due to poor logistic model fits using the entire 1953-2018 time series, we did not conduct retrospective analyses of logistic regression LRPs for this SMU as was done for the Interior Fraser River Coho case study. The characteristics of the data that led to poor logistic model fits are highlighted in the results section below. 
 
 
-Projection LRPs are an alternative aggregate abundance LRP that we did not consider for this SMU due to lack of peer-reviewed stock-recruitment parameter estimates<!--CW replace: parameter estimates. LW: realized that Holt et al. 2018 did have parameter estimates for alpha in tables, and used those to recommend percentile benchmarks. Might want to replace 'peer-reviewed' with 'reliable'? --> for component CUs. However, this approach could be considered in future analyses given consensus on model structure and parameterization that provide realistic uncertainties in projections of population dynamics.
+Projection LRPs are an alternative aggregate abundance LRP that we did not consider for this SMU due to lack of reliable stock-recruitment parameter estimates<!--CW replace: parameter estimates. LW: realized that Holt et al. 2018 did have parameter estimates for alpha in tables, and used those to recommend percentile benchmarks. Might want to replace 'peer-reviewed' with 'reliable'? --> for component CUs. However, this approach could be considered in future analyses given consensus on model structure and parameterization that provide realistic uncertainties in projections of population dynamics.
 
 
 ### Results
@@ -287,8 +287,7 @@ Existing guidelines and cautions should be incorporated into any LRP analysis us
 
 One difference between application of percentile-approach in Alaska and BC is that in BC, spawners are aggregated across rivers within a CU while in Alaska this approach is applied to each river [@mckinleyReviewSalmonEscapement2020]. ISC chum includes 296 streams among the seven CUs, with 126 in Strait of Georgia alone. Aggregating over river systems within CUs ignores the distribution of spawning within the CU and may not capture the loss of some less productive sub-population components within the CU. Spawner abundance at the CU level may not be a good predictor of status of individual rivers compared to at the river scale. Spawner abundance at CU level may not be a good predictor of status of individual rivers compared to SEGs at the river scale, depending on the contrast in size between rivers and the correlation (or lack thereof) in escapement and/or productivity. This risk is especially relevant in this case study because the data is infilled assuming correlation in spawning escapement within CUs. This approach ignores possible portfolio effects, whereby stock aggregates gain stability from the asynchrony of their component rivers [@brennanShiftingHabitatMosaics2019; @davisEffectsVariabilitySynchrony2021; @mooreConservationRisksPortfolio2021].
 
-An additional source of uncertainty stems from spawner time series that may include the influence of enhancement, which introduces the risk of inflating wild spawner numbers and overly optimistic status assessments. We removed three systems of highly enhanced chum (Qualicum, Little Qualicum, and Puntledge) before infilling stream escapements, but hatchery influence may impact time-series for the remaining systems.
-<!--LW: Need to check with Pieter Van Will on how much or a risk this actually is based on amount of hatchery production for ISC chum and straying. Look at Lynch et al. 2020 report  http://publications.gc.ca/collections/collection_2021/mpo-dfo/Fs97-13-1319-eng.pdf as well--> 
+An additional source of uncertainty stems from spawner time series that may include the influence of enhancement, which introduces the risk of inflating wild spawner numbers and overly optimistic status assessments. We removed three systems that are highly enhanced (Qualicum and Little Qualicum from spawning channels, and Puntledge from a hatchery) before infilling stream escapements, but hatchery influence may impact time-series for the remaining systems through production and/or straying [@lynchAssessmentEnhancedChum2020].
 
 
 We showed that increasing the number of CUs included in proportional LRP status assessment gave a more pessimistic status. This is not surprising given the low correlation of CUs within this SMU; we do not expect CUs to be interchangeable. Therefore, it makes sense to use as much data as possible to represent variable dynamics within the CU, where those data are reliable. For this SMU where the status of two data-limited CUs, Upper Knight and Bute Inlet, cannot be inferred from data-rich CUs (see Section \@ref(chum-context)), omitting the data-limited CUs from analyses can result in either an SMU status that is data deficient or below the LRP depending on status of remaining data-rich CUs. When the status of at least one of the data-rich CUs is in the Red zone, the proportional LRP of 100% of CUs above the Red zone is considered breached. However, if the status of all data-rich CUs are above the Red zone, the SMU is considered data deficient if status of data-limited CUs is unknown because it cannot be inferred. In our case, we could assess status based on trends for these data-limited CUs as applied in the Salmon Scanner. However, in other SMUs, there may be cases where data to estimate trends are not available.
