Minor formatting changes

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -274,10 +274,13 @@ Classification accuracy was evaluated based on the ratio of successful classific
 
 ### PROJECTION LRPS{#projectedMethods}
 
-Projection LRPs are estimated using simulated CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g., S~gen~). Parameters describing CU-level population dynamics are estimated from available data, and then individual CUs are projected forward under current exploitation rates (with sensitivity analyses used to explore alternative exploitation rates). This approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect a lack of biological and/or fisheries information.  Natural variability in recruitment and ages-at-maturity are incorporated into projections, as is implementation uncertainty in exploitation rates. Projections are run for 30 years after an initialization period to identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. These projections should not be interpreted as predictions of future abundance; rather, they are used to simulate the underlying relationship between SMU-level abundance and the probability that all CUs will be above their LBMs. As with logistic regression LRPs, we relied on status estimated from a single metric rather than multidimensional status estimates from the Salmon Scanner tool to develop LRPs.
+Projection LRPs are estimated using simulated CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g., S~gen~). Parameters describing CU-level population dynamics are estimated from available data, and then individual CUs are projected forward under current exploitation rates (with sensitivity analyses used to explore alternative exploitation rates). This approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect a lack of biological and/or fisheries information.  Natural variability in recruitment and ages-at-maturity are incorporated into projections, as is implementation uncertainty in exploitation rates. As with logistic regression LRPs, we relied on status estimated from a single metric rather than multidimensional status estimates from the Salmon Scanner tool to develop LRPs. 
 
 
-We used the samSim closed loop simulation modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to evaluate fisheries rebuilding plans in simulation for Pacific salmon<!--CH 1 Feb: reworded this last sentence a bit--> [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix \@ref(app:samsim-appendix), and model code is available on GitHub (see Appendix \@ref(app:github-appendix) for a link to the code).  
+For our case studies, we ran projections for 30 years after an initialization period to identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. We recommend that the initialization and number of years be chosen on an SMU-by-SMU basis to ensure the distribution of trajectories capture equilibrium conditions. These projections should not be interpreted as predictions of future abundance; rather, they are used to simulate the underlying relationship between SMU-level abundance and the probability that all CUs will be above their LBMs. 
+
+
+We used the samSim closed loop simulation modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to evaluate fisheries rebuilding plans in simulation for Pacific salmon<!--CH 1 Feb: reworded this last sentence a bit--> [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix \@ref(app:samsim-appendix), and model code is available on GitHub (Appendix \@ref(app:github-appendix)).  
 
 
 Detailed descriptions of the parameterization of samSim for our two case study applications of projection LRPs (Interior Fraser Coho and WCVI Chinook) are presented in Sections \@ref(IFCChapter) and \@ref(WCVIchinookChapter), respectively. In both cases, we incorporated uncertainty into projected CU dynamics through the specification of empirically-derived probability distributions for key biological and management parameters, including stock-recruitment parameters, proportion of recruits at age, and exploitation rates (ER). Larger structural uncertainties in model formulation were represented through the use of sensitivity analyses and/or alternative operating models (OMs). Observation error was not included in projections because derivation of LRPs was based on projected 'true' abundance levels rather than observed abundance. 
