--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -16,17 +16,17 @@ knitr::include_graphics("figure/chum-map.png")
 ```
 
 
-The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions (i.e., not all streams counted each year, some CUs have no counts in some years). In addition, run reconstructions of recruitment are uncertain, making the development of benchmarks based on spawner and recruitment data problematic. There are also no data on marine survival [although there are some scale/growth data in @debertinMarineGrowthPatterns2017]. Other unique characteristics of this SMU include high contrast in abundance among CUs and relatively low correlation in abundance among CUs over time. The SMU covers a large area with many diverse watersheds, flow regimes, and ocean entry locations. Wild Salmon Policy status assessments have not been done on any ISC Chum CUs. @godboutStockStatusWild2004 identified long-term increases or variable abundance in Georgia Strait and Howe Sound-Burrard Inlet and declines in Northeast Vancouver Island and especially in the Southern Coastal Streams CU (from 1953-2002). @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status. At this time, a peer-reviewed integrated WSP status assessment has not been developed for ISC chum.
+The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions (i.e., not all streams counted each year, some CUs have no counts in some years). In addition, run reconstructions of recruitment are uncertain, making the development of benchmarks based on spawner and recruitment data problematic. There are also no data on marine survival [although there are some scale/growth data in @debertinMarineGrowthPatterns2017]. Other unique characteristics of this SMU include high contrast in abundance among CUs and relatively low correlation in abundance among CUs over time. The SMU covers a large area with many diverse watersheds, flow regimes, and ocean entry locations. Wild Salmon Policy status assessments have not been done on any ISC Chum CUs. @godboutStockStatusWild2004 identified long-term increases or variable abundance in Georgia Strait and Howe Sound-Burrard Inlet and declines in Northeast Vancouver Island and especially in the Southern Coastal Streams CU (from 1953-2002). @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status. At this time, a peer-reviewed WSP status assessment has not been developed for ISC chum.
 
 
-Holt et al. (in review) provide steps for applying LRPs to salmon SMUs, one of which is to identify if the status of data-deficient CUs can be represented by other data-rich CUs. This is relevant for the ISC Chum case study because two CUs have no observations in some years (Upper Knight and Bute Inlet). For data deficient CUs to be represented by CUs with data, there needs to be evidence that the data deficient CUs have similar threats, environmental drivers, biological characteristics, and population capacity as CUs with sufficient data.
+Holt et al. (in review) provide steps for applying LRPs to salmon SMUs, one of which is to identify if the status of data-deficient CUs can be represented by other data-rich CUs. This is relevant for the ISC Chum case study because two CUs have no observations in some years (Upper Knight and Bute Inlet). To infer status of data-deficient CUs from data-rich CUs, Holt et al. (in review) recommend providing evidence for similarities threats, environmental drivers, biological characteristics, and population capacity among CUs.<!--CH 1 Feb. suggested rewording of this sentence. Origianl text" For data deficient CUs to be represented by CUs with data, there needs to be evidence that the data deficient CUs have similar threats, environmental drivers, biological characteristics, and population capacity as CUs with sufficient data."-->
 
 
 Upper Knight and Bute Inlet CUs are both associated with long fjords that run from the Broughton Archipelago through the Coast Mountains. They include rivers with headwaters in the Cariboo region farther inland than other CUs in the SMU (Figure \@ref(fig:chum-map)). Southern Coastal Streams, Georgia Strait, and Howe Sound-Burrard Inlet also include portions of the Coast Mountains and some glaciers, but to a lesser extent and their inlets are shorter and their watersheds do not go as far inland. Upper Knight and Bute Inlet are unique in that they are the only CUs in the SMU that only include watersheds that drain into the upper end of long inlets. They are both more remote than the other CUs, which is partly why there are fewer observations over time for Chum with fall run timing.
 
 Chum from the Upper Knight and Bute Inlet CUs are exposed to different threats to habitat, survival and productivity than the other five CUs in both the fresh water and the early marine phase. While these two CUs have, on average, lower impacts from forest harvest, impervious area, and roads, they have larger impacts from forest defoliation and pests [@pacificsalmonfoundationPacificSalmonExplorer2021]. They may also have different levels of risk from disturbances such as glacier melt, avalanches, debris flows, and floods because they have large melting glaciers associated with lakes, steep slopes, and unstable terrain. In the Bute Inlet CU, the glacial lake outburst flood that caused a debris flow in the Southgate River in November 2020 is one example of such an event. These events are capable of killing an entire brood year of eggs/alevins and reshaping habitat with impacts on spawning habitat and stream ecosystems for many years. They can also change water quality in near shore marine habitats. These catastrophic events may be less likely in watersheds with gentler topography and that lack glaciers and glacial lakes. 
 
-Environmental drivers, biological characteristics, and population capacity for Upper Knight and Bute Inlet CUs also differ from the other seven CUs. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. The two largest watersheds in these CUs (Homathko and Klinaklini) fall within their own Freshwater Adaptive Zone, which indicates unique freshwater habitat conditions (Figure 76 and Table 52 in @holtbyConservationUnitsPacific2007). These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Competition with other salmon in the ocean and ocean conditions affect chum salmon in this SMU [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021a], although declines in Pink salmon stocks in this general area may suggest that these factors are not affecting these CUs only. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and years with very low productivity. These CUs also have lower habitat capacity, with fewer streams with fall timed Chum spawners than the other CUs (Table \@ref(tab:CU-summary)). Based on these differences, the burden of proof is not met, and we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be borrowed for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. 
+Environmental drivers, biological characteristics, and population capacity for Upper Knight and Bute Inlet CUs also differ from the other seven CUs. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. The two largest watersheds in these CUs (Homathko and Klinaklini) fall within their own Freshwater Adaptive Zone, which indicates unique freshwater habitat conditions (Figure 76 and Table 52 in @holtbyConservationUnitsPacific2007). These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Competition with other salmon in the ocean and ocean conditions affect chum salmon in this SMU [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021a], although declines in Pink salmon stocks in this general area may suggest that these factors are not affecting these CUs only. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and years with very low productivity. These CUs also have lower habitat capacity, with fewer streams with fall timed Chum spawners than the other CUs (Table \@ref(tab:CU-summary)). Based on these differences, <!--CH 1 Feb. suggest remoing "the burden of proof is not met,"-->and we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be inferred for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. 
 
 
 ```{r CU-summary, echo=FALSE}
@@ -35,7 +35,7 @@ csasdown::csas_table(d,
    align = c('l', 'c', 'c','c','c'),
    caption = #ifelse(french,
                    #"French goes here",
-                   "The seven Conservation Units in the Inside South Coast Chum Non-Fraser Stock Management Unit. Note that only fall run streams were used in this study due to run reconstruction methods. LBM = Lower Benchmark, UBM = Upper Benchmark used for percentile benchmarks.")
+                   "The seven Conservation Units in the Inside South Coast Chum Non-Fraser Stock Management Unit. Note that only fall run streams were used in this study due to run reconstruction methods. LBM = Lower Benchmark, UBM = Upper Benchmark derived using the percentile method.")
             #)
 ```
 
@@ -47,17 +47,17 @@ csasdown::csas_table(d,
 -->
 
 
-Benchmarks based on spawner-recruit relationships are unreliable if underlying recruitment data are unreliable. One alternative is benchmarks calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks). Previous work on developing WSP benchmarks for Inner South Coast Chum has shown that percentile benchmarks can be comparable to those based on stock-recruit relationships when productivity is relatively high and harvest is relatively low [@holtEvaluatingBenchmarksBiological2018]. In other cases, percentile benchmarks may be inappropriate due to low productivity or high harvest, resulting in a shifting baseline [@holtEvaluatingBenchmarksBiological2018].
+<!--CH 1 Feb. Suggest removing as repeated in previous chapters. "Benchmarks based on spawner-recruit relationships are unreliable if underlying recruitment data are unreliable. One alternative is benchmarks calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks)."--> Previous evaluations of WSP benchmarks for Inner South Coast Chum have shown that percentile benchmarks can be comparable to those based on stock-recruit relationships when productivity is relatively high and harvest is relatively low [@holtEvaluatingBenchmarksBiological2018]. <!--CH reword: In other cases, -->However, in some cases, percentile benchmarks may be inappropriate due to low productivity or high harvest, resulting in a shifting baseline [@holtEvaluatingBenchmarksBiological2018].
 
 
-We chose the ISC Chum SMU as a case study because we were interested in exploring LRP options for a data-limited SMU without stock-recruitment or habitat-based benchmarks. We applied LRPs based on two methods: proportions of CUs above their lower benchmark, and aggregate abundance LRPs estimated using the logistic regression approach. 
+We chose the ISC Chum SMU as a case study because we were interested in exploring LRP options for a data-limited SMU without stock-recruitment or habitat-based benchmarks. We applied LRPs based on two methods: proportions of CUs above Red status <!--CH 1 Feb revised encompass Scanner: "their lower benchmark"-->, and aggregate abundance LRPs estimated using the logistic regression approach. 
 
 ## DATA
 
-We used the same data used in @holtEvaluatingBenchmarksBiological2018, but updated with five additional years of data. Available data included spawner abundance time series from 1959 - 2018 and corresponding CU-level recruitment estimated from run reconstruction. Spawner abundance series rely heavily on infilling; 60% of observations (count of spawners for an individual stream, in a given year) were missing and needed to be infilled. We chose to apply infilling procedures for this SMU when possible to develop metrics of wild spawner abundance since infilling methods for this SMU have been previously peer-reviewed (@holtEvaluatingBenchmarksBiological2018). This differs from the approach taken for WCVI Chinook, in which infilling methods had not been established due to high and variable hatchery influences. Recruitment data are considered highly uncertain for all ISC Chum CUs due to uncertain assumptions required to assign mixed fishery catch to CUs within the run reconstruction model. As a result, we did not consider recruitment time-series to be reliable enough to estimate stock recruitment-based benchmarks such as S\textsubscript{MSY} and S\textsubscript{gen}. We did however use spawner recruit model fits to provide approximate estimates of CU-level productivity, which are used to inform the application of percentile-based benchmarks.
+We used the same data used in @holtEvaluatingBenchmarksBiological2018, but updated with five additional years of data. Available data included spawner abundance time series from 1959 - 2018 and corresponding CU-level recruitment estimated from run reconstruction. Spawner abundance series rely heavily on infilling; 60% of observations (count of spawners for an individual stream, in a given year) were missing and needed to be infilled. We chose to apply infilling procedures for this SMU when possible to develop metrics of wild spawner abundance since infilling methods for this SMU have been previously peer reviewed [@holtEvaluatingBenchmarksBiological2018]. This differs from the approach taken for WCVI Chinook, in which infilling methods were not implemented due to high and variable hatchery influences. Recruitment data are considered highly uncertain for all ISC Chum CUs due to uncertain assumptions required to assign mixed-fishery catch to CUs within the run-reconstruction model. As a result, we did not consider recruitment time-series to be reliable enough to estimate stock recruitment-based benchmarks such as S\textsubscript{MSY} and S\textsubscript{gen}. We did however use spawner recruit model fits to provide approximate estimates of CU-level productivity, which are used to inform the application of percentile-based benchmarks.
 
 
-@vanwillInnerSouthCoast2014 provides more details on the data sources, infilling procedures and run reconstruction, which were reproduced for this study. We did not include the Lower Fraser or Fraser Canyon Chum CUs. More details can be found in Appendix \@ref(app:appendix-chum). We removed three systems with extensive enhancement (Qualicum River and Little Qualicum River from spawning channels, and Puntledge River from hatchery production, all within the Georgia Strait CU) aligned with recommendations from @withlerGeneticallyBasedTargets2018. It is assumed that the enhanced contribution to spawning was near 100% for these systems.
+@vanwillInnerSouthCoast2014 provides more details on the data sources, infilling procedures and run reconstruction, which were reproduced for this study. We did not include the Lower Fraser or Fraser Canyon Chum CUs. More details can be found in Appendix \@ref(app:appendix-chum). We removed three systems with extensive enhancement (Qualicum River and Little Qualicum River from spawning channels, and Puntledge River from hatchery production, all within the Georgia Strait CU)<!--CH 1 feb. suggest removing as Withler didn't address spawning channels. However our omission of our " aligned with recommendations from @withlerGeneticallyBasedTargets2018."--> It is assumed that the enhanced contribution to spawning was near 100% for these systems.
 
 ## CU STATUS ESTIMATION
 
